[workspace]
resolver = "2"
members = [
    "crates/ignyt-cli",
    "crates/ignyt-ast",
    "crates/ignyt-types",
    "crates/ignyt-security",
    "crates/ignyt-dead",
    "crates/ignyt-complexity",
    "crates/ignyt-fmt",
    "crates/ignyt-diagnostics",
    "crates/ignyt-config",
    "crates/ignyt-fix",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/MuhammadHananAsghar/ignyt"
description = "The fastest Python code quality engine in the world"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
ignyt-ast = { path = "crates/ignyt-ast" }
ignyt-types = { path = "crates/ignyt-types" }
ignyt-security = { path = "crates/ignyt-security" }
ignyt-dead = { path = "crates/ignyt-dead" }
ignyt-complexity = { path = "crates/ignyt-complexity" }
ignyt-fmt = { path = "crates/ignyt-fmt" }
ignyt-diagnostics = { path = "crates/ignyt-diagnostics" }
ignyt-config = { path = "crates/ignyt-config" }
ignyt-fix = { path = "crates/ignyt-fix" }

# Python AST
rustpython-parser = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Error reporting
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Parallelism
rayon = "1"

# Graph / CFG
petgraph = "0.6"

# Caching
cacache = "13"

# Async (CVE fetching)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Glob / path matching
ignore = "0.4"
globset = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Output formatting
owo-colors = "4"
indicatif = "0.17"

# File watching
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"

# Testing
insta = { version = "1", features = ["yaml"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
