[package]
name = "ignyt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI entrypoint and orchestrator for Ignyt"

[[bin]]
name = "ignyt"
path = "src/main.rs"

[dependencies]
ignyt-ast = { workspace = true }
ignyt-types = { workspace = true }
ignyt-security = { workspace = true }
ignyt-dead = { workspace = true }
ignyt-complexity = { workspace = true }
ignyt-fmt = { workspace = true }
ignyt-diagnostics = { workspace = true }
ignyt-config = { workspace = true }
ignyt-fix = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
owo-colors = { workspace = true }
indicatif = { workspace = true }
ignore = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
assert_cmd = "2"
predicates = "3"
