[package]
name = "ignyt-complexity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cyclomatic and cognitive complexity analyzer for Ignyt"

[dependencies]
ignyt-ast = { workspace = true }
ignyt-diagnostics = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
