[package]
name = "ignyt-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration parser for ignyt.toml"

[dependencies]
ignyt-diagnostics = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
