[package]
name = "ignyt-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared diagnostic and error reporting types for Ignyt"

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
owo-colors = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
