[package]
name = "ignyt-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Code formatter and import sorter for Ignyt"

[dependencies]
ignyt-ast = { workspace = true }
ignyt-diagnostics = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
