[package]
name = "ignyt-security"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Security scanner and CVE auditor for Ignyt"

[dependencies]
ignyt-ast = { workspace = true }
ignyt-diagnostics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
