[package]
name = "ignyt-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Type inference and checking engine for Ignyt"

[dependencies]
ignyt-ast = { workspace = true }
ignyt-diagnostics = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
